# Switch_AIs

./: README.md  README.rst
.github/workflows/: black.yml  mypy.yml  pylint.yml
suika/: README.md  bootstrap.sh  pyproject.toml  requirements.txt  run_checks.sh
suika/suika/: __init__.py  __main__.py
suika/suika/core/: __init__.py
suika/suika/core/managers/: __init__.py  reinforcement.py
suika/suika/core/watcher/: __init__.py  imaging.py  screen.py
suika/suika/managers/: __init__.py  reinforcement.py
suika/test/: test_screen.py
